[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Playfield.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Piece.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/NextPieces.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Score.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://sound/ready.wav" type="AudioStream" id=7]
[ext_resource path="res://sound/go.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="InputEventAction" id=2]
action = "ui_select"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.19873, 0.177771, 0.177771, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Playfield" parent="." instance=ExtResource( 2 )]
margin_left = 364.0
margin_top = 112.0
margin_right = 688.0
margin_bottom = 592.0

[node name="Piece" parent="." instance=ExtResource( 3 )]
margin_left = 364.0
margin_top = 112.0
margin_right = 688.0
margin_bottom = 592.0

[node name="NextPieces" parent="." instance=ExtResource( 4 )]
position = Vector2( 472, 8 )

[node name="Score" parent="." instance=ExtResource( 5 )]
margin_left = 616.0
margin_right = 616.0

[node name="HUD" type="Control" parent="."]
margin_left = 364.0
margin_top = 112.0
margin_right = 688.0
margin_bottom = 592.0

[node name="StartGameButton" type="Button" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -27.5
margin_right = 70.0
margin_bottom = 27.5
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 3 )
text = "Start"

[node name="DetailMessageLabel" type="RichTextLabel" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -221.819
margin_right = 118.0
margin_bottom = -43.819
custom_styles/normal = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
text = "Controls

Arrows: Move
Up/Shift: Hard drop
Down: Soft drop
Z, X: Rotate"
scroll_active = false

[node name="MessageLabel" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -40.0
margin_right = 144.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 6 )
text = "3"
align = 1
valign = 1

[node name="ReadySound" type="AudioStreamPlayer" parent="HUD"]
stream = ExtResource( 7 )

[node name="GoSound" type="AudioStreamPlayer" parent="HUD"]
stream = ExtResource( 8 )
[connection signal="line_cleared" from="Playfield" to="." method="_on_line_cleared"]
[connection signal="game_ended" from="Piece" to="." method="_on_game_ended"]
[connection signal="pressed" from="HUD/StartGameButton" to="." method="_on_StartGameButton_pressed"]
